--- a/manuscript.rmd
+++ b/manuscript.rmd
@@ -91,7 +91,9 @@ We argue that two things are at least as important as reproducibility, namely:
 - The culture valueing openness
 - Tools to make it possible and efficient to work in the open
 
-# Past research on reproducibility (from our AERA workshop proposal and earlier drafts)
+# Background 
+
+## Reproducibility (from our AERA workshop proposal and earlier drafts)
 
 The basic premise of reproducible research is that quantitative analyses should
 be conducted and documented with sufficient clarity that independent researchers
@@ -119,21 +121,25 @@ transparency in process: In fact, part of the reason reproducible research is
 essential is that it allows other researchers to verify the process and
 analysis, and ultimately, the validity of the inferences made from a study.
 
-Recent research about replication in particular (Gehlbach & Robinson, 2017). Research about building knowledge in the field, related to replication (Hedges, 2018).
-
 Recent research about preparing educational researchers and advancing the methodological capabilities of the field (Henson, Hull, & Williams, 2010)
+
+## Pre-registration
+
+Recent research about replication in particular (Gehlbach & Robinson, 2017). Research about building knowledge in the field, related to replication (Hedges, 2018). van der Zee & Reich, 2018
 
 Recent calls for registered reports ([AERA Open](http://journals.sagepub.com/page/ero/collections/special-topic-collections/index), [Journal of Computer Assisted Learning](https://onlinelibrary.wiley.com/journal/13652729)).
 
-# Past research on an open research culture
+# Open tools
+
+Wickham? Python folks? Computational science folks?
+- any studies (empirical) on value of this?
+open source software (lots of research on this)
+
+# An open research culture
 
 Societies emphasizing open science ([Society for the Improvement of Psychological Science](https://www.improvingpsych.org), [rOpenSci](https://ropensci.org/))
 
-Past research on open science in general (Bertling  Friesike, 2014; National Research Council, 2018) and in educational research (Cook et al., pre-print publication;  McBee, Makel, Peters, & Matthews, pre-print publication; van der Zee & Reich, 2018) 
-
-# Past research on open tools
-
-Wickham? Python folks? Computational science folks?
+Past research on open science in general (Bertling  Friesike, 2014; National Research Council, 2018) and in educational research (Cook et al., pre-print publication;  McBee, Makel, Peters, & Matthews, pre-print publication) 
 
 # Three examples of an open culture and open tools leading to reproducible work
 
